tests/integration/snapshots/integration__snapshot__ref_confusion-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"ref-confusion/issue-518-repro.yml\")).offline(false).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:12:9
   |
12 |         uses: arduino/setup-task@v2
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
